<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.edu.uac.segundoparcial.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn_modificar"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_registrar"
        android:layout_marginRight="20dp"
        android:text="@string/modificar"
        tools:drawableStart="@android:drawable/ic_menu_edit"
        tools:ignore="NewApi,RtlHardcoded" />

    <Button
        android:id="@+id/btn_consultar"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_modificar"
        android:layout_alignStart="@+id/btn_modificar"
        android:layout_below="@+id/btn_modificar"
        android:text="@string/consulta"
        tools:drawableStart="?android:attr/actionModeWebSearchDrawable"
        tools:ignore="NewApi"
        android:layout_above="@+id/btn_acerca" />

    <Button
        android:id="@+id/btn_listar"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:text="@string/listar"
        tools:drawableStart="@android:drawable/ic_menu_sort_by_size"
        tools:ignore="NewApi"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_above="@+id/btn_modificar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_registrar"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_add"
        android:text="@string/registrar"
        tools:ignore="NewApi"
        android:layout_above="@+id/btn_listar"
        android:layout_alignLeft="@+id/btn_listar"
        android:layout_alignStart="@+id/btn_listar"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_acerca"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_manage"
        android:text="@string/acerca"
        tools:ignore="NewApi,RtlHardcoded"
        android:layout_below="@+id/btn_listar"
        android:layout_alignLeft="@+id/btn_listar"
        android:layout_alignStart="@+id/btn_listar"
        android:layout_alignRight="@+id/btn_consultar"
        android:layout_alignEnd="@+id/btn_consultar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription=""
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/food"
        tools:ignore="ContentDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/btn_acerca" />

</RelativeLayout>
