<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded,RtlSymmetry,UselessParent">

            <EditText
                android:id="@+id/edite_codigoalmacen"
                style="@style/EditorFieldStyle"
                android:hint="@string/codigoalmacen"
                android:inputType="number" />

            <EditText
                android:id="@+id/edite_codigoproducto"
                style="@style/EditorFieldStyle"
                android:hint="@string/codigoproducto"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btneliminar"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:elevation="12dp"
            android:text="@string/eliminar1"
            tools:ignore="NewApi,UnusedAttribute" />

    </RelativeLayout>

</RelativeLayout>